# nRF52840-blinky-freertos-template

./: .astylerc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  Makefile2  README.md  build-all.sh  buildall.sh  doxyfile
.github/workflows/: mega-linter.yml
CMake/: FindCatch2.cmake
src/: main.cpp
src/config/: FreeRTOSConfig.h  sdk_config.h
src/led/: led.cpp  led.hpp  led_instances.cpp  led_instances.hpp  led_task.cpp  led_task.hpp
test/: CMakeLists.txt  ExampleTests.cpp  basic.cpp  basic_test.cpp  led_test.cpp  test.cpp
test/doubles/: FreeRTOS.c  FreeRTOS.h  app_error.h  bsp.c  bsp.cpp  bsp.h  led.hpp  mock-bsp.h  mock-bsp.hpp  nordic_common.h  nrf_drv_clock.h  sdk_errors.h  task.h  timers.h
